# ml-VirtualWhiteboard

./: README.md  pyproject.toml
virtual_whiteboard/: HandTrackingModule.py  virtual_painter.py
